task-2/terraform/security/resources.tf
variable "vpc_id" {}

resource "aws_security_group" "demo_sg" {
  name        = "demo-sg"
  description = "Security group for all nodes"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "demo_sg_ids" {
  value = [aws_security_group.demo_sg.id]
}
